fix width andspacings

--- a/resources/sass/config/_colors.scss
+++ b/resources/sass/config/_colors.scss
@@ -1,5 +1,6 @@
 $primary: #edb01f;
 $secondary: #6298d4;
+$light-secondary: #8bb3df;
 $success: #3EED21;
 $danger: #ED2121;
 $dark-50: #fafaf9;
