--- a/resources/sass/parts/_modal.scss
+++ b/resources/sass/parts/_modal.scss
@@ -47,7 +47,8 @@
         width: sizes.$gap;
         height: sizes.$gap;
 
-        &::before, &::after {
+        &::before,
+        &::after {
             content: "";
             position: absolute;
             top: math.div(sizes.$gap, 2);
@@ -57,10 +58,19 @@
             background-color: colors.$dark-700;
             transform: rotate(45deg);
             border-radius: 100vh;
+
+            transition: all 0.3s ease;
         }
 
         &::after {
             transform: rotate(-45deg);
+        }
+
+        &:focus::before,
+        &:focus::after,
+        &:hover::before,
+        &:hover::after {
+            background-color: colors.$secondary;
         }
     }
 
