--- a/resources/sass/parts/_nav.scss
+++ b/resources/sass/parts/_nav.scss
@@ -4,8 +4,13 @@
 @use "sass:math";
 
 .nav {
-    display: flex;
-    justify-content: space-between;
+    &__content{
+        width: 83%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-between;
+    }
+
     &__items {
         display: flex;
         gap: sizes.$gap;
@@ -67,8 +72,11 @@
     }
 
     @media (max-width: sizes.$bp-s) {
-        flex-direction: column;
-        padding: sizes.$spacer 0;
+        &__content {
+            width: 100%;
+            flex-direction: column;
+            padding: sizes.$spacer 0;
+        }
         &__link {
             padding: sizes.$spacer 0;
             &::after {
